--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --overlay-color: rgba(33, 150, 243, 0.9);
   --modal-bg-color: rgba(0, 0, 0, 0.1);
   --icon-color: #afb1b8;
+  --primary-font-size: 14px;
   --item: 3;
   --indent: 30px;
   --anim-slow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -149,7 +150,7 @@ p {
   color: var(--title-text-color);
 
   font-weight: 500;
-  font-size: 14px;
+  font-size: var(--primary-font-size);
   line-height: 1.14;
   letter-spacing: 0.02em;
 
@@ -237,12 +238,12 @@ p {
 
   color: var(--title-text-color);
 
-  font-size: 14px;
+  font-size: var(--primary-font-size);
   line-height: 1.14;
   text-transform: uppercase;
 }
 .feature-list .text {
-  font-size: 14px;
+  font-size: var(--primary-font-size);
   line-height: 1.71;
 }
 
@@ -288,7 +289,7 @@ p {
 }
 .section-card-text {
   font-weight: 700;
-  font-size: 14px;
+  font-size: var(--primary-font-size);
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--primary-white-color);
@@ -410,7 +411,7 @@ p {
   margin-bottom: 20px;
 
   font-weight: 700;
-  font-size: 14px;
+  font-size: var(--primary-font-size);
   line-height: 1.14;
   text-transform: uppercase;
 
@@ -455,14 +456,14 @@ p {
   color: var(--primary-white-color);
 
   font-style: normal;
-  font-size: 14px;
+  font-size: var(--primary-font-size);
   line-height: 1.71;
 }
 
 .contacts .contacts-details {
   color: var(--contacts-color);
   font-style: normal;
-  font-size: 14px;
+  font-size: var(--primary-font-size);
   line-height: 1.71;
 
   transition: color var(--anim-slow);
@@ -735,7 +736,7 @@ p {
   fill: var(--accent-color);
 }
 .form-textarea::placeholder {
-  font-size: 14px;
+  font-size: var(--primary-font-size);
   line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
@@ -767,12 +768,12 @@ p {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
 .form-checbox-agreement {
-  font-size: 14px;
+  font-size: var(--primary-font-size);
   line-height: 1.71;
   user-select: none;
 }
 .form-checbox-link {
-  font-size: 14px;
+  font-size: var(--primary-font-size);
   line-height: 1.71;
   color: var(--accent-color);
 }
