--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
   --modal-bg-color: rgba(0, 0, 0, 0.1);
   --icon-color: #afb1b8;
   --primary-font-size: 14px;
+  --secondary-font-size: 16px;
   --item: 3;
   --indent: 30px;
   --anim-slow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -80,7 +81,7 @@ p {
 
   font-family: inherit;
   font-weight: 700;
-  font-size: 16px;
+  font-size: var(--secondary-font-size);
   line-height: 1.88;
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
@@ -319,13 +320,13 @@ p {
   color: var(--title-text-color);
 
   font-weight: 500;
-  font-size: 16px;
+  font-size: var(--secondary-font-size);
   line-height: 1.19;
 }
 .team-list .text {
   margin-bottom: 16px;
 
-  font-size: 16px;
+  font-size: var(--secondary-font-size);
   line-height: 1.19;
 }
 .social-media {
@@ -490,7 +491,7 @@ p {
   color: var(--primary-white-color);
 }
 .contacts-form-input::placeholder {
-  font-size: 16px;
+  font-size: var(--secondary-font-size);
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 }
@@ -535,7 +536,7 @@ p {
 
   font-family: inherit;
   font-weight: 500;
-  font-size: 16px;
+  font-size: var(--secondary-font-size);
   line-height: 1.63;
   text-align: center;
   cursor: pointer;
@@ -607,7 +608,7 @@ p {
 .exemples .text {
   color: var(--primary-text-color);
 
-  font-size: 16px;
+  font-size: var(--secondary-font-size);
   line-height: 1.88;
 
   transition: color var(--anim-slow);
