--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -16,9 +16,7 @@
   transition: outline var(--anim-slow);
 
   &__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include centeredFlex(center, center);
 
     height: 92px;
     color: var(--icon-color);
