--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
-@import './utils/index';
+@import './utils/module';
 
-@import './base/index';
+@import './base/module';
 
-@import './components/index';
+@import './components/module';
 
-@import './layouts/index';
+@import './layouts/module';
