--- a/sass/components/_sosials.scss
+++ b/sass/components/_sosials.scss
@@ -1,14 +1,11 @@
 .social-media {
-  display: flex;
-  justify-content: center;
+  @include centeredFlex(center, null);
 
   &__item:not(:last-child) {
     margin-right: 10px;
   }
   &__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include centeredFlex(center, center);
 
     width: 44px;
     height: 44px;
