--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -6,9 +6,8 @@
   }
   &__wrapper {
     height: 120px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+    @include centeredFlex(center, center);
 
     margin-bottom: 30px;
 
