--- a/sass/layouts/_modal-form.scss
+++ b/sass/layouts/_modal-form.scss
@@ -35,9 +35,8 @@
   height: 120px;
 }
 .form__checkbox {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  @include centeredFlex(space-evenly, center);
+
   margin-bottom: 30px;
 }
 .checkbox__agreement {
