--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -15,9 +15,7 @@
     left: 0;
     bottom: 0;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include centeredFlex(center, center);
 
     width: 100%;
     height: 70px;
