--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,7 +6,7 @@
 
   padding: 40px;
   width: 528px;
-  height: 581px;
+  min-height: 581px;
   background-color: var(--primary-white-color);
   border-radius: 4px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
