--- a/sass/components/form/_input.scss
+++ b/sass/components/form/_input.scss
@@ -1,6 +1,9 @@
 .input {
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
+  // outline: 1px solid rgba(33, 33, 33, 0.2);
+  // outline-offset: -1px;
+
   border-radius: 4px;
 
   transition: border-color var(--anim-slow);
